Highlight Root Node

--- a/public/style.css
+++ b/public/style.css
@@ -40,3 +40,7 @@ pre {
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
+
+#tree-annonated .node:last-child{
+    border: 2px solid red !important;
+}
