Fix Root not visible for long expression

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,6 +76,8 @@
 			nodeStructure: {{tree|tojson|safe}}
 		};
 		var my_chart = new Treant(simple_chart_config);
+		var chart = document.getElementById("tree-annonated");
+		chart.scrollLeft=chart.offsetWidth;
 	</script>
 </body>
 </html>
