--- a/templates/index.html
+++ b/templates/index.html
@@ -39,12 +39,13 @@
 		<div class="row">
 		    <div class="col-sm-8 col-xs-12" style="text-align: center;">
 				<h2>Anonnated Parse Tree</h2>
-				<p style="font-weight: 500;">{{expression}}</p>
+			    	<a href="https://rohitchattopadhyay.github.io/BCSE-III-Compiler-Design-Lab-Project/" target="_blank" style="text-decoration:none">Click for more details</a>
+				<p style="font-weight: 900;">{{expression}}</p>
 				<div id="tree-annonated"></div>
 			</div>
 			<div id="three-address" class="col-sm-4 col-xs-12">
 				<h2>Three Address Code</h2>
-				<pre style="height: 50vh;overflow-y: auto;">{{address}}</pre>
+				<pre style="height: 50vh; overflow-y: auto; margin: 0">{{address}}</pre>
 				<marquee onclick="newExpression()" style="cursor: pointer;border: 1px solid;padding: 0.5em;border-left: none;border-right: none;">Click to enter new expression</marquee>
 				<small>
 					Developed for JU BCSE Compiler Lab Assignment<br/>
